# hive-api

./: .coverage  .gitignore  CLAUDE.md  README.md  config.toml  pyproject.toml  start-local.sh  start.sh  symphony.sh
.claude/: launch.json  settings.local.json
frontend/web/: docker-compose.yml
scripts/: discover_models.py  sync_models.py
src/ai_cli_api/: config.py  main.py  models.py  service.py  shells.py  updater.py  worker.py
src/ai_cli_api/models/: __init__.py  chat.py  enums.py  provider.py  sse.py  testlab.py
src/ai_cli_api/providers/: base.py  claude.py  codex.py  copilot.py  gemini.py  kimi.py  opencode.py  registry.py
src/ai_cli_api/routes/: __init__.py  _deps.py  chat.py  console.py  providers.py  testlab.py  updates.py
src/ai_cli_api/ui/: index.html
src/ai_cli_api/updater/: registry.py  single_provider.py  updater.py  version_checker.py
src/ai_cli_api/worker/: __init__.py  handle.py  manager.py  warm_worker.py
src/hive_api/: config.py  service.py  shells.py
src/hive_api/colony/: colony.py  drone.py  handle.py
src/hive_api/models/: chat.py  testlab.py
src/hive_api/providers/: base.py  claude.py  codex.py
src/symphony/: config.py  parent_watchdog.py  service.py  shells.py
tests/: conftest.py  test_adapters.py  test_api.py  test_config.py  test_discovery.py  test_drones.py  test_musicians.py  test_parent_watchdog.py  test_refresh.py  test_shells.py  test_testlab.py  test_updater.py  test_workers.py
tests/adapters/: test_claude.py  test_codex.py  test_copilot.py  test_gemini.py  test_kimi.py  test_opencode.py
tests/fakes/: fake_cli.py
tests/ui_e2e/: conftest.py  test_failure_controls.py  test_load.py  test_streaming.py  test_ui.py
tests/updater/: test_auto_update.py  test_version_check.py
(+64 files in other folders)
