[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cli-api"
version = "0.1.0"
description = "Warm-worker API wrapper for Gemini, Codex, Claude, and Kimi CLIs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
  "pydantic>=2.10,<3.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.25,<1.0",
  "playwright>=1.49,<2.0",
  "pytest-playwright>=0.6,<1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ai_cli_api = ["ui/*.html"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
