[build-system]
requires = ["setuptools>=82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cli-api"
version = "0.1.0"
description = "Warm-worker API wrapper for AI coding CLIs (Gemini, Codex, Claude, Kimi, Copilot, OpenCode)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.135,<1.0",
  "uvicorn[standard]>=0.42,<1.0",
  "pydantic>=2.12,<3.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=9.0,<10.0",
  "pytest-asyncio>=1.3,<2.0",
  "playwright>=1.58,<2.0",
  "pytest-playwright>=0.7,<1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ai_cli_api = ["ui/*.html", "ui/static/*.css", "ui/static/*.js"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
